[OWB-1376] fix unsafe usage to define classes